Fixed to span of visible tablet

--- a/css/less/style-responsive.less
+++ b/css/less/style-responsive.less
@@ -43,3 +43,11 @@
     padding-right: 20px;
   }
 }
+
+@media (min-width: 768px) and (max-width: 979px) {
+  .row-fluid {
+    .visible-tablet-span9 {
+      #grid > .core > .span(12);
+    }
+  }
+}
